syntax = "proto3";

option java_multiple_files = true;
option java_package = "bio.overture.archetype.grpc_template.proto.car_service";
option java_outer_classname = "CarServiceProto";
option objc_class_prefix = "CSP";

package template_car_service;

service CarService {

    rpc CreateCar (CreateCarRequest) returns (CreateCarResponse);
    rpc GetCar (GetCarRequest) returns (GetCarResponse);

}

message CreateCarRequest {
    CarData car = 1;
}

message CreateCarResponse {
    string id = 1;
    CarData car = 2;
}

message GetCarRequest {
    string id = 1;
}

message GetCarResponse {
    string id = 1;
    CarData car = 2;
}

message CarData {
    string brand = 2;
    string model = 3;
    DriveType type = 4;
    Date dateCreated = 5;
    int32 horsepower = 6;
    bool electric = 7;
}


message Date {
    int32 year = 1;
    int32 month = 2;
    int32 day = 3;
}

enum DriveType {
    UNDEFINED = 0;
    FRONT_WHEEL = 1;
    BACK_WHEEL = 2;
    ALL_WHEEL = 3;
}
